basic revamp of button handlers completed